# evilrobotjames

./: README.md
.github/workflows/: ccpp.yml
advent-of-code-2020/1/: advent1.py
advent-of-code-2020/2/: main.py  main2.py
advent-of-code-2020/3/: main.py  main2.py
advent-of-code-2020/4/: 4-1.py  4-2.py
advent-of-code-2020/5/: 5-1.py
advent-of-code-2020/6/: 6-1.py  6-2.py
advent-of-code-2020/7/: 7-1.py  7-2.py  bags.dot
advent-of-code-2020/8/: 8-1.py  8-2.py
advent-of-code-2020/9/: 9-2.py
carcassonne/: CMakeLists.txt  carcassonne.geany  cmake-codeblocks.sh
carcassonne/include/: Board.h  Component.h  Edge.h  FeatureSection.h  Tile.h  TileSet.h
carcassonne/src/: Component.cxx  Edge.cxx  Edge.h  FeatureSection.cxx  Tile.cxx  Tile.h  TileSet.cxx  carcassonne.cxx  carcassonneConfig.h.in
carcassonne/src/include/: Edge.h
carcassonne/src/lib/: CMakeLists.txt  Tile.cxx
diskcheck/: .gitignore  Makefile  SConstruct  diskcheck.c
seive/: seive.py
sort/: algorithm.py  bubble.py  python_sorted.py  seed.py  test.py
speakers/: client.py  server.py  speakers.init
speakers/init.d/: speakers
speakers/src/: client.py  commands.py  common.py  gpio.py  server.py
